# main.go
@@ -2,14 +2,16 @@ package main
 
 import (
 	"net/http"
+	"time"
 
 	"github.com/gin-gonic/gin"
+	"github.com/swaggo/files"       // swagger embed files
 	"github.com/swaggo/gin-swagger" // gin-swagger middleware
-	"github.com/swaggo/files" // swagger embed files
-	"github.com/uacademy/article/docs" // docs is generated by Swag CLI, you have to import it.
-)
 
-var InMemoryArticleData []Article
+	"github.com/uacademy/article/docs" // docs is generated by Swag CLI, you have to import it.
+	"github.com/uacademy/article/handlers"
+	"github.com/uacademy/article/models"
+)
 
 func main() {
 	// programmatically set swagger info
@@ -17,8 +19,17 @@ func main() {
 	docs.SwaggerInfo.Description = "This is a sample server Petstore server."
 	docs.SwaggerInfo.Version = "1.0"
 
-	InMemoryArticleData = append(InMemoryArticleData, Article{
-		Id: "1",
+	handlers.InMemoryArticleData = append(handlers.InMemoryArticleData, models.Article{
+		Id: "286002a5-0021-45d3-bdb1-c502fa1ef9a9",
+		Content: models.Content{
+			Title: "Lorem",
+			Body: "Something about lorem",
+		},
+		Author: models.Person{
+			Firstname: "John",
+			Lastname: "Doe",
+		},
+		Created_at: time.Now(),
 	})
 
 	r := gin.Default()
@@ -32,11 +43,11 @@ func main() {
 
 	v1 := r.Group("/v1")
 	{
-		v1.POST("/article", CreateArticle)
-		v1.GET("/article/:id", GetArticleById)
-		v1.GET("/article", GetArticleList)
-		v1.PUT("/article", UpdateArticle)
-		v1.DELETE("/article/:id", DeleteArticle)
+		v1.POST("/article", handlers.CreateArticle)
+		v1.GET("/article/:id", handlers.GetArticleById)
+		v1.GET("/article", handlers.GetArticleList)
+		v1.PUT("/article", handlers.UpdateArticle)
+		v1.DELETE("/article/:id", handlers.DeleteArticle)
 	}
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
